# gyftie-contracts

./: .gitignore  CMakeLists.txt  deployments.sh  gyftie-mainnet  gyftie.sh  jungle_test.txt
client/: README.md  deploy.sh  jungle_test.txt  package-lock.json  package.json
client/public/: index.html
client/src/: App.vue  config.js  router.js
client/src/components/: Landing.vue
client/src/views/: BuyGFT.vue  Collaborate.vue  Gyft.vue  Home.vue  Issue.vue  ListProposals.vue  Propose.vue  SellGFT.vue  Transfer.vue  ViewBalance.vue  Vote.vue  Wallet.vue
genesisgen/: CMakeLists.txt  genesisgen.cpp  genesisgen.hpp
gftmultisig/: CMakeLists.txt  gftmultisig.cpp  gftmultisig.hpp
gftorderbook/: CMakeLists.txt  gftorderbook.cpp  gftorderbook.hpp
gyftietoken/: CMakeLists.txt  gyftietoken.cpp  gyftietoken.hpp
gyftietoken/includes/: abieos_numeric.hpp
secondgen/: CMakeLists.txt  secondgen.cpp  secondgen.hpp
test/: package-lock.json  package.json  test.gyftie.js
test/config/: index.js
tools/: index.js  package-lock.json  package.json
